--- a/notas-fiscais/WebContent/login.xhtml
+++ b/notas-fiscais/WebContent/login.xhtml
@@ -6,7 +6,7 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 <ui:composition template="/_template.xhtml">
 	<ui:define name="corpo">
-		<h2>Login no sistema</h2>
+		<h2>Acesso ao Sistema</h2>
 		<h:form id="formlogin">
 			<h:panelGrid columns="2" styleClass="campos">
 				<h:outputLabel value="Login" for="login" />
