--- a/notas-fiscais/WebContent/produto.xhtml
+++ b/notas-fiscais/WebContent/produto.xhtml
@@ -5,6 +5,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 <ui:composition template="/_template.xhtml">
+	<ui:define name="title">Sistema Notas Fiscais - UberDist - Produtos</ui:define>
 	<ui:define name="corpo">
 		<h:form id="formProduto">
 			<h2>
