--- a/notas-fiscais/WebContent/_template.xhtml
+++ b/notas-fiscais/WebContent/_template.xhtml
@@ -6,7 +6,7 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Welcome - Sistema Notas Fiscais - UberDist</title>
+	<title><ui:insert name="title">Welcome - Sistema Notas Fiscais - UberDist</ui:insert></title>
 	<h:outputStylesheet library="css" name="style.css" />
 </h:head>
 <h:body>
